# modulegen

./: modulegen.cabal
src/: 1.aux  1.tex  Main.hs  Main.hs.old  tab1.odt  tab1.tex  tab2.odt
